# lambda-rust-sample

./: Cargo.toml  README.md  package.json  serverless.yml
src/: main.rs
