[package]
name = "dynamodb-getitem-sample"
version = "0.1.0"
authors = ["papamitra"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.1"
log = "0.4.6"
env_logger = "0.6.0"
rusoto_core = "0.36.0"
rusoto_dynamodb = "0.36.0"
serde = "1.0.84"
serde_derive = "1.0.84"
serde_json = "1.0.34"
serde_dynamodb = { git = "https://github.com/mockersf/serde_dynamodb.git", rev = "79e3dd7765574dce64a283a3ffb32f45079100b4" }
